Fixed prob with grid not showing up properly. Added missed container class on base.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,7 @@ ul:not(.browser-default) {
 }
 
 .text-shadow2 {
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.25);
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.15);
 }
 
 .fas {
